# envelope-software

./: .gitignore  BUILD.md  CLIENT_DELIVERY.md  LICENSE  README.md  envelope-studio.spec  pyproject.toml  sample_list.csv  sample_list.json
.github/workflows/: build-windows.yml
docs/: blog-medium-envelope-studio.md
envelope_app/: auth.py  csv_import.py  db.py  json_import.py  layout.py  main.py  merge.py  paths.py  printing.py  record_import.py  version.py
envelope_app/ui/: designer_widget.py  login_dialog.py  main_window.py  theme.py
scripts/: build_release.sh  build_release_windows.bat  build_release_windows.ps1
