[project]
name = "envelope-studio"
version = "1.0.0"
description = "Envelope #10 label designer with JSON mail merge and local printing"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.6.0",
]

[project.scripts]
envelope-studio = "envelope_app.main:main"

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["envelope_app", "envelope_app.ui"]
